<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView
    android:text="@string/section_orientation"
    android:textAppearance="?android:attr/textAppearanceLarge" 
    android:paddingRight="@dimen/spacer_width"
   />

  <TableRow android:id="@+id/row_heading">
    <TextView android:text="@string/label_heading" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/heading_degrees" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/heading_point" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_pitch">
    <TextView android:text="@string/label_pitch" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/pitch_degrees" />
    <include layout="@layout/spacer" />
  </TableRow>

  <TableRow android:id="@+id/row_roll">
    <TextView android:text="@string/label_roll" />
    <include layout="@layout/spacer" />
    <TextView android:id="@+id/roll_degrees" />
    <include layout="@layout/spacer" />
  </TableRow>
</merge>
